Added right immigration images.

--- a/index_jenabled.html
+++ b/index_jenabled.html
@@ -190,15 +190,15 @@
 
 						<div class="top">
 					<div class="left">
-						<img src="http://www.bettertalkingpoints.com/images/portfolio/1_big.jpg" alt="DefaultBig">
+						<img src="http://www.bettertalkingpoints.com/images/portfolio/progressive-immigration.jpg" alt="DefaultBig">
 					</div>
 					<div class="right">
 						<div class="top">
-							<img src="http://www.bettertalkingpoints.com/images/portfolio/family-values-angry-father.gif" alt="DefaultSmall1a">
+							<img src="http://www.bettertalkingpoints.com/images/portfolio/border-patrol.jpg" alt="DefaultSmall1a">
 						</div>
 						<div class="bottom">
 
-							<img src="http://www.bettertalkingpoints.com/images/portfolio/1b_small.jpg" alt="DefaultSmall1b">
+							<img src="http://www.bettertalkingpoints.com/images/portfolio/immigration-raid.jpg" alt="DefaultSmall1b">
 						</div>
 					</div>
 				</div>
