Added Talking Point #13: Hiring Americans, with pics.

--- a/index_jenabled.html
+++ b/index_jenabled.html
@@ -376,6 +376,26 @@
 							<a href="#" class="sendlink">Send to a Friend</a>
 						</div>
 		 			</div>
+<div id="hiring-americans" class="box">
+		 				<div class="top">
+		 					<div class="left">
+		 						<img src="images/portfolio/teamsters.jpg" alt="Progressive Patriotism">
+		 					</div>
+		 					<div class="right">
+		 						<div class="top">
+		 							<img src="images/portfolio/outsourcing-sewer.jpg" alt="Conservative Patriotism">
+		 						</div>
+		 						<div class="bottom">
+		 							<img src="images/portfolio/empty-factory.jpg" alt="Conservative Patriotism">
+		 						</div>
+		 					</div>
+		 				</div>
+						<div class="bottom">
+							<h2>HIRING AMERICANS<span>Job Security is National Security</span></h2>
+							<p>America is a country full of talented and qualified people that are willing and able to do any job presented to them for a fair wage and reasonable working conditions. American businesses must reward the Nation &amp; infrastructure upon which they are built by hiring American employees first and giving them the chance to solve the challenges of tomorrow.</p>
+							<a href="#" class="sendlink">Send to a Friend</a>
+						</div>
+		 			</div>
 				</div>
 
 			
