Updated all Send to a Friend links to have the right sharebtplink class.

--- a/index_jenabled.html
+++ b/index_jenabled.html
@@ -111,7 +111,7 @@
 							<h2>PATRIOTISM<span>Serving &amp; Supporting America</span></h2>
 
 							<p>Patriotism means a &ldquo;love of country and willingness to sacrifice for it&rdquo;. Progressive Patriotism is the ability to love one&apos;s country enough to sacrifice your time and talent to work for it and better it. Service is at the heart of Patriotism, at home and abroad.</p>
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 						</div>
 			 		</div>
 			 		<!-- START OF BETTER Talking Point #2 -->
@@ -135,7 +135,7 @@
 							<h2>FREEDOM<span>Live without fear</span></h2>
 							<p>To have freedom is to be able to do what is best for your country, your community, your family, and yourself without fear. We eliminate fear by making sure that people&apos;s dreams are supported &amp; made possible, and that people&apos;s basic needs are met.</p>
 
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 						</div>
 			 		</div>
 			 		<!-- START OF BETTER Talking Point #3 -->
@@ -158,7 +158,7 @@
 						<div class="bottom">
 							<h2>MORALITY<span>Doing what's best.</span></h2>
 							<p>To act morally is to empower and positively impact the world and those around you. Moral Values are inclusive values that build people up: <strong>equality, fairness, sharing, friendship</strong> When faced with moral challenges, these guiding values will give us the perspective to make the right decisions.</p>
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 
 						</div>
 			 		</div>
@@ -182,7 +182,7 @@
 
 					<h2>FAIRNESS<span>Give everyone a chance.</span></h2>
 					<p>Every American deserves the chance to live a healthy and productive life. The America's promise of fairness includes giving every child an equal, high-quality, well-funded education and making sure that the wealthy and the struggling have access to equal, high-quality, well-funded health care.<!--Giving every American a fair chance to use their talents by making sure that we are all on equal footing is what makes this the greatest nation on Earth.--></p>
-					<a href="#" class="sendlink">Send to a Friend</a>
+					<a href="#" class="sharebtplink">Send to a Friend</a>
 				</div>
 	 				</div>
 					<!-- START OF BETTER Talking Point #5 -->
@@ -206,7 +206,7 @@
 					<h2>IMMIGRATION<span>An Open and Responsible America</span></h2>
 					<p>America should be willing to provide leadership in education and access, so the world's best &amp; brightest should be able to come to this country to learn and better themselves. American businesses should not benefit from the exploitation of ambitious people from around the world by looking the other way and providing a path to enter this country illegally.</p>
 
-					<a href="#" class="sendlink">Send to a Friend</a>
+					<a href="#" class="sharebtplink">Send to a Friend</a>
 				</div>
 					</div>
 					<!-- START OF BETTER Talking Point #6 -->
@@ -229,7 +229,7 @@
 						<div class="bottom">
 					<h2>NATIONAL SECURITY<span>Credibility Makes Us Secure</span></h2>
 					<p>We can keep America safe by first building respectful &amp; trusting relationships with other nations by spreading American credibility &amp; goodwill before democracy. Regaining the respect and trust of the people and leaders of other countries will lead all nations to address conflicts by diplomacy, not military force. </p>
-					<a href="#" class="sendlink">Send to a Friend</a>
+					<a href="#" class="sharebtplink">Send to a Friend</a>
 
 				</div>
 					</div>
@@ -253,7 +253,7 @@
 
 					<h2>HOMELAND SECURITY<span>Confidence &amp; Safety</span></h2>
 					<p>Confidence &amp; safety at home enable Americans to be free to realize their full potential without the fear of our government or infrastructure failing. Our confidence, patriotism, and pride drives us all to share the responsibility for our investing in our shared security and ability to take care of one another.</p>
-					<a href="#" class="sendlink">Send to a Friend</a>
+					<a href="#" class="sharebtplink">Send to a Friend</a>
 				</div>
 					</div>
 
@@ -277,7 +277,7 @@
 							<h2>OUR ENVIRONMENT<span>Living with the Earth</span></h2>
 
 							<p>Just as the Earth takes care of man, man should take care of the Earth. In all that we create, consume, and dispose of, we must deliberately make sure that our impact on the environment is as small as possible. We must modernize existing practices to reduce waste and reverse the climate crisis.</p>
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 						</div>
 			 		</div>
 					<!-- START OF BETTER Talking Point #9 -->
@@ -301,7 +301,7 @@
 							<h2>HEALTH CARE<span>Healing people before they get sick</span></h2>
 							<p><!--Great people deserve great health care. -->Every American must have access to the best health care in the world without insurance companies influencing the decisions of people to go to the doctor or of doctors to provide preventative treatments. Having a single-payer, government-backed health care program will give <strong>every</strong> American access to the simplest of all human rights: <strong>the right to be healthy.</strong></p>
 
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 						</div>
 		 			</div>
 					<!-- START OF BETTER Talking Point #10 -->
@@ -324,7 +324,7 @@
 						<div class="bottom">
 							<h2>FISCAL RESPONSIBILITY<span>Using the Common Wealth to invest in America</span></h2>
 							<p>The wealth of created by the American people should be used to solve the larger challenges we face, just like a family's money is used to address their own challenges. Poverty, hunger, health care, and the environment are all issues that endanger our future and that have solutions that we can invest in to secure our future.</p>
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 						</div>
 		 			</div>
 
@@ -348,7 +348,7 @@
 							<h2>ELECTION PROTECTION<span>Protecting Voting &amp; Voters</span></h2>
 
 							<p>The right to participate and be included in the decisions affecting all of us collectively is sacred. We do this by voting. The right of <strong>every person</strong> to vote and ensuring that <strong>everyone&apos;s</strong> votes are counted is the only way to protect &amp; preserve our democracy and our freedom. We must eliminate <del>voter</del> election fraud.</p>
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 
 						</div>
 		 			</div>
@@ -373,7 +373,7 @@
 							<h2>EDUCATION<span>Investing in America's future</span></h2>
 							<p>Healthy &amp; well-educated children will keep America great for generations to come. We need to invest fairly, fully, and equally in <strong>every</strong> child in <strong>every</strong> city in the nation to make sure that they all have great facilities and well-paid, well-trained teachers to give show them how to think &amp; solve problems. An investment in them is an investment in our future.</p>
 
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 						</div>
 		 			</div>
                                         <div id="hiring-americans" class="box">
@@ -393,7 +393,7 @@
 						<div class="bottom">
 							<h2>HIRING AMERICANS<span>Job Security is National Security</span></h2>
 							<p>America is a country full of talented and qualified people that are willing and able to do any job presented to them for a fair wage and reasonable working conditions. American businesses must reward the Nation &amp; infrastructure upon which they are built by hiring American employees first and giving them the chance to solve the challenges of tomorrow.</p>
-							<a href="#" class="sendlink">Send to a Friend</a>
+							<a href="#" class="sharebtplink">Send to a Friend</a>
 						</div>
 		 			</div>
 				</div>
